tests/ui/compile-fail/pin_data/no_pin_on_phantompinned.rs
use pin_init::*;
use std::marker::{self, PhantomPinned};

#[pin_data]
struct Foo {
    pin1: PhantomPinned,
    pin2: marker::PhantomPinned,
    pin3: core::marker::PhantomPinned,
    pin4: ::core::marker::PhantomPinned,
}

fn main() {}
